Update GraphQL
