# src/modules/countries/countries.controller.ts
@@ -1,7 +1,11 @@
 import { Controller, Get, Route, SuccessResponse, Tags } from 'tsoa';
 import { Country } from '../../common/clients/apis/rest-countries/types';
-import { getCountries, getCountryCodes } from './countries.service';
-import { CountryCodes } from './countries.types';
+import {
+  getCountries,
+  getCountriesRegions,
+  getCountryCodes,
+} from './countries.service';
+import { CountryCodes, CountryRegions } from './countries.types';
 
 @Tags('Countries')
 @Route('api/countries')
@@ -16,5 +20,11 @@ export class CountriesController extends Controller {
   @SuccessResponse('200', 'Get Country Codes')
   public async getCountryCodes(): Promise<CountryCodes[]> {
     return getCountryCodes();
+  }
+
+  @Get('regions')
+  @SuccessResponse('200', 'Get Country Codes')
+  public async getCountriesRegions(): Promise<CountryRegions[]> {
+    return getCountriesRegions();
   }
 }
